Jump solved

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,13 +68,6 @@
 }
 
 .topbar_menu a:hover {
-    background-color: #5d6eff;
-    color: #fff;
-    text-decoration: none;
-    box-shadow: inset 0 0 10px rgba(70, 93, 255, 0.1);
-}
-
-.topbar_menu a:hover {
     background-color: #fff;
     color: #465dff;
     text-transform: uppercase;
@@ -249,7 +242,6 @@
     background-color: #3347e4;
     box-shadow: inset 0 0 10px rgba(70, 93, 255, 0.1);
     color: #fff;
-    font-weight: 400;
 }
 
 /* ========================= */
@@ -295,9 +287,8 @@
     margin-left: -3.7rem;
     margin-right: 1.5rem;
     font-weight: 600;
-    margin-top: 3px;
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     text-decoration: none;
     display: inline-block;
 
